import { PrettyTest } from '../../test-utils/PrettyTest';
const prettyTest = new PrettyTest([
  'pretty/casing-1.sql',
  'pretty/casing-2.sql',
  'pretty/casing-3.sql',
  'pretty/casing-4.sql',
  'pretty/casing-5.sql',
  'pretty/casing-6.sql',
  'pretty/casing-7.sql',
  'pretty/casing-8.sql',
  'pretty/casing-9.sql',
  'pretty/casing-10.sql',
  'pretty/casing-11.sql',
  'pretty/casing-12.sql',
  'pretty/casing-13.sql',
  'pretty/casing-14.sql',
  'pretty/casing-15.sql',
  'pretty/casing-16.sql',
  'pretty/casing-17.sql',
  'pretty/casing-18.sql',
  'pretty/casing-19.sql',
  'pretty/casing-20.sql',
  'pretty/casing-21.sql',
  'pretty/casing-22.sql',
  'pretty/casing-23.sql',
  'pretty/casing-24.sql',
  'pretty/casing-25.sql',
  'pretty/casing-26.sql',
  'pretty/casing-27.sql',
  'pretty/casing-28.sql',
  'pretty/casing-29.sql',
  'pretty/casing-30.sql',
  'pretty/casing-31.sql',
  'pretty/casing-32.sql',
]);

prettyTest.generateTests();